# atlas

./: .coverage  .dev-gate-passed  .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .oos_integration_status  API_DOCUMENTATION.md  ARCHITECTURE_DESIGN.md  ATLAS_COMPREHENSIVE_TEST_SUITE.md  ATLAS_DATA_IMPORT_GUIDE.md  ATLAS_SYSTEM_DOCUMENTATION.md  ATLAS_USER_GUIDE.md  ATLAS_V2_DEPLOYMENT_PLAN.md  BOOKMARKLET.md  BULK_INGESTION_PLAN.md  CLAUDE.md  COMPLETE_Downie_Atlas_Setup.md  CONSULTANT_SETUP.md  DOCUMENTATION_INDEX.md  DOWNIE_APPLESCRIPT_BRIDGE.applescript  GITHUB_ACTIONS_IMPROVEMENTS.md  GMAIL_INTEGRATION.md  GMAIL_SETUP_CHECKLIST.md  GMAIL_SETUP_GUIDE.md  HYPERDUCK_DOWNIE_ATLAS_SETUP.sh  HYPERDUCK_SETUP_INSTRUCTIONS.md  IPHONE_SHARE_INSTRUCTIONS.md  LLM-OVERVIEW.md  MERGE_TO_MAIN.md  MOBILE_SETUP.txt  Makefile  NUMERIC_STAGES.md  OPERATIONS_GUIDE.md  PODCAST_TRANSCRIPT_PLAN.md  PRD.md  PRODUCTION_HANDOFF_SUMMARY.md  PROJECT_STATUS_REPORT.md  README.md  (+1114 more)
.agent-os/: README.md
.atlas-tasks/: CURRENT_PHASE.md  MASTER_CHECKLIST.md  VALIDATION_LOG.md
.claude_backup_1759806961/: settings.local.json
.github/: CI_CONFIGURATION.md  PULL_REQUEST_TEMPLATE.md
.oneshot/: checkpoint.yaml
LEGAL/: COMPLIANCE_NOTES.md  LICENSE.md  PRIVACY_POLICY.md  TERMS_OF_USE.md
advanced_processing/: advanced_processor.py
api/: __init__.py  capture.py  main.py  search_server.py  transcript_search.py
apple_shortcuts/: ios_extension.py  reading_list_import.py  siri_shortcuts.py  voice_processing.py
archon-telegram-ingest/: README.md  deploy.sh  telegram_webhook.py
ask/: README.md  __init__.py  active_recall_system.py  pattern_detector.py  proactive_content_surfacer.py  recommendation_engine.py  socratic_question_generator.py  temporal_relationship_analyzer.py
atlas_shortcuts/: capture_thought.json  log_meal.json  log_mood.json  log_mood.shortcut  start_focus.json
atlas_v2_migration/: content_by_type.txt  content_counts.txt
attachments/: email_ef3cbb7f-670e-4d7b-b737-e2e088a72d16_test-file.txt
auth/: README.md  nginx_auth_setup.py  session_manager.py
automation/: google_data_harvester.py  youtube_history_scraper.py
backup/: README.md  database_backup.py  local_sync_backup.py  restore_system.py
browser_extension/: README.md  build.sh  build_extensions.sh  content.js  popup_firefox.js
config/: .gitignore  alert_config.json  alerting.yaml  api.yaml  article_sources.json  ask_config.yml  atlas_config.toml  backlog_sources.yaml  categories 2.yaml  comprehensive_source_mapping.json  config.example.json  config.yaml  database.yaml  discovered_transcript_sources.json  email_config.json.example  env_test_vars  feeds.yaml  gmail_config.example.json  ingestion_reliability.yaml  install_atlas_autostart.sh  install_shortcuts.sh  install_systemd_service.sh  link_approval_rules.yml  mac_mini.json  mac_mini_setup.sh  mapping.yml  mypy.ini  observability.yaml  paywall_patterns.json  podcast_config.csv  podcast_config_backup.csv  podcast_expansion_plan.csv  podcast_hosts.json  podcast_limits.json  podcast_rss_feeds.csv  podcast_sources.json  podcast_sources_cache.json  podcasts.csv  podcasts_from_your_preferences.csv  podcasts_full.csv  (+19 more)
core/: database.py  database_config.py
crawlers/: github_detector.py  tech_resource_crawler.py
dashboard/: dashboard_server.py
devops/: README.md  dev_sync.py  emergency_tools.py  git_deploy.py
discovery/: discovery_scheduler.py  duplicate_detector.py  (+8 more)
(+2621 files in other folders)
